<resources>
    <string name="app_name">Convenience</string>

    <string name="stock_code">Stock Code</string>
    <string name="please_into_stock_code">please input stock code</string>
    <string name="stock_name">股票名称 ：</string>
    <string name="stock_code_chinese">股票代码 ：</string>
    <string name="todaystartpri">今天开盘 ：</string>
    <string name="todaymax">今天最高 ：</string>
    <string name="yestodendpri">昨日收盘 ：</string>
    <string name="todaymin">今日最低 ：</string>
    <string name="tranumber">成交量 ：</string>
    <string name="rate">涨跌率 ：</string>
    <string name="traamount">成交额 ：</string>
    <string name="min">分时K线图</string>
    <string name="day">日K线图</string>
    <string name="week">周K线图</string>
    <string name="mouth">月K线图</string>
    <string name="nowpri">当前价格 ：</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="get_stock_code">股票代码：例如：sh601009</string>


    <string name="weatcher">Weather</string>
    <string name="Refresh">Refresh</string>
    <string name="Load_to">Load to ...</string>

</resources>
