<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/query_EditText"
        android:gravity="center"
        android:textColor="#ff0000"
        android:hint="@string/stock_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/getStock_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_stock_code"/>

    <ScrollView
        android:background="#f4000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/stock_name"
                    android:textColor="#ffff00"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/stockName_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#ffc138"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:text="@string/stock_code_chinese"
                    android:textColor="#ff5e00"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/stockCode_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#ff606e"
                    style="@style/TextViewStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/todaystartpri"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#ff0054"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/todaystartpri_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#ff5095"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:text="@string/todaymax"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#ff00c6"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/todaymax_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#ff53d9"
                    style="@style/TextViewStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/yestodendpri"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#c800ff"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/yestodendpri_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#dd5bff"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:text="@string/todaymin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#1200ff"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/todaymin_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#5550ff"
                    style="@style/TextViewStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/tranumber"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#00baff"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/tranumber_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#86ddff"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:text="@string/rate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#00ffd4"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/rate_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#83ffc5"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    style="@style/TextViewStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/traamount"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="#00ff31"
                        style="@style/TextViewStyle"/>

                    <TextView
                        android:id="@+id/traamount_TextView"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="#aeff91"
                        style="@style/TextViewStyle"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/nowpri"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#90ff00"
                    style="@style/TextViewStyle"/>

                <TextView
                    android:id="@+id/nowpri_TextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    style="@style/TextViewStyle"/>

            </LinearLayout>

            <TextView
                android:text="@string/min"
                style="@style/PictureTextViewStyle"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/min_progressBar"/>

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/min_ImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:text="@string/day"
                style="@style/PictureTextViewStyle"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/day_progressBar"/>

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/day_ImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:text="@string/week"
                style="@style/PictureTextViewStyle"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/week_progressBar"/>

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/week_ImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:text="@string/mouth"
                style="@style/PictureTextViewStyle"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/month_progressBar"/>

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/month_ImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
